kubernetes/apps/external-secrets/external-secrets/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
          - port: "6443"
            protocol: TCP

    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
            app.kubernetes.io/name: vault
            vault-active: "true"
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-cert-controller
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-cert-controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
          - port: "6443"
            protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-webhook
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
          - port: "6443"
            protocol: TCP
